# go-archiver

./: Dockerfile  README.md  go.mod  gopy.md  pyproject.toml
docs/: todo.md
src/go_archiver/: __init__.py  build.py  main.py
src/go_archiver/cli/: prompt.py
src/go_archiver/cmd/: tarball.py
src/go_archiver/go/: Makefile
src/go_archiver/go/archiver/: README.md  archiver_test.go  creator.go  filter.go  go.mod  modifier.go  scanner.go  types.go
src/go_archiver/go/archiver/testdata/: setup_test_files.go
src/go_archiver/go/archiver/testdata/source/videos/: video2.webm
src/go_archiver/go/bindings/: bindings.go  go.mod
src/go_archiver/tests/: test_archiver.py
